# specRT

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: api.rst  conf.py  configuration.rst  examples.rst  index.rst  input_format.rst  installation.rst  outputs.rst  performance.rst  usage.rst
examples/: example_spec.txt  r4.txt  run_example_spec.py  run_r4_example.py
examples/example_spec_csv_outputs/: CNMonlydata.csv  Fulldata.csv  WNMonlydata.csv
examples/r4_csv_outputs/: CNMonlydata.csv  Fulldata.csv  WNMonlydata.csv
src/Absorption_fitting/: __init__.py  spectra_decomposing.py  spectra_decomposing_io.py  spectra_decomposing_plotting.py  spectra_decomposing_utils.py
src/spec_rt/: __init__.py  spectra_decomposing.py  spectra_decomposing_utils.py
tests/: test_example_spec.py  test_example_spec_csv_outputs.py  test_gaussfitspec_boundary.py  test_imports.py  test_io_validation.py  test_r4_csv_outputs.py  test_r4_example.py  test_utils_plotting_outputs.py
