[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "specRT"
version = "0.1.0"
description = "Gaussian-based absorption and emission spectral fitting tools."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
  "astropy>=5.0",
  "gaussFitSpec>=1.0.1",
  "matplotlib>=3.7",
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10"
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=7.4",
  "twine>=5.0"
]
docs = [
  "sphinx>=8.0",
  "sphinx-rtd-theme>=3.0"
]

[project.urls]
Documentation = "https://specrt.readthedocs.io/en/latest/"
Homepage = "https://pypi.org/project/specRT/"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
